--- a/openatlas/templates/overview/index.html
+++ b/openatlas/templates/overview/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block breadcrumb %}overview{% endblock %}
 {% block body %}
     This is a Pythons World!
 {% endblock %}
