--- a/openatlas/templates/overview/index.html
+++ b/openatlas/templates/overview/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}overview{% endblock %}
+{% block breadcrumb %}{{ _('overview')|uc_first }}{% endblock %}
 {% block body %}
     This is a Pythons World!
 {% endblock %}
