--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -2,17 +2,18 @@
 <html>
     <head>
         <meta charset="UTF-8" />
+        <meta name="theme-color" content="#ffffff" />
         <title>project_name</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
         <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16" />
         <link rel="manifest" href="/favicon/manifest.json" />
         <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" />
-        <meta name="theme-color" content="#ffffff" />
         <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}"/>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/color.css') }}"/>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/images.css') }}"/>
+        <script src="{{ url_for('static', filename='js/functions.js') }}" type="text/javascript"></script>
     </head>
     <body>
         <div id="header">
@@ -22,27 +23,42 @@
                 {% if 'local' in request['url_root'] %}
                     local
                 {% endif %}
+                <noscript><div class="error">{{ _('warning no js') }}</div></noscript>
+            </div>
+
+            <div id="header-menu">
+                <div id="zoom-menu">
+                    <img src="{{ url_for('static', filename='images/icons/zoom-in.png') }}"
+                         onclick="resizeText(1)" alt="{{ _('zoom in') }}" title="{{ _('zoom in') }}"/>
+                    <img src="{{ url_for('static', filename='images/icons/zoom-out.png') }}"
+                         onclick="resizeText(-1)" alt="{{ _('zoom out') }}" title="{{ _('zoom out') }}"/>
+                </div>
+                 {% for language in config['LANGUAGES'].keys(): %}
+                    {% if 'language' in session and session['language'] == language: %}
+                        <span>{{ language|upper }}</span>
+                    {% else: %}
+                        <a href="/index/setlocale/{{ language }}">{{ language|upper }}</a>
+                    {% endif %}
+                {% endfor %}
             </div>
         </div>
         <div id="menu">
-            <div class="active"><a href="/">overview</a></div>
+            <div class="active"><a href="/">{{ _('overview')|uc_first }}</a></div>
             <div><a href="/">test_menu_item</a></div>
         </div>
         <div id="breadcrumb">
             {% block breadcrumb %}{% endblock %}
         </div>
         <div id="content">
-            <noscript><div id="noscript-warning" class="error">warning_no_js</div></noscript>
             {% block body %}{% endblock %}
             {% if 'craws.net' in request['url_root'] %}
             <div id="powered-by">
                 Another
                 <a href="http://openatlas.eu" onclick="window.open(this.href); return false;">OpenAtlas</a>
                 project powered by
-                <a href="http://craws.net" onclick="window.open(this.href); return false;"> craws.net</a>
+                <a href="http://craws.net" onclick="window.open(this.href); return false;">craws.net</a>
             </div>
         {% endif %}
         </div>
-
     </body>
 </html>
