--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -25,21 +25,25 @@
                 {% endif %}
                 <noscript><div class="error">{{ _('warning no js') }}</div></noscript>
             </div>
-
             <div id="header-menu">
-                <div id="zoom-menu">
-                    <img src="{{ url_for('static', filename='images/icons/zoom-in.png') }}"
-                         onclick="resizeText(1)" alt="{{ _('zoom in') }}" title="{{ _('zoom in') }}"/>
-                    <img src="{{ url_for('static', filename='images/icons/zoom-out.png') }}"
-                         onclick="resizeText(-1)" alt="{{ _('zoom out') }}" title="{{ _('zoom out') }}"/>
+                <div>
+                    {{ _('version')|uc_first }} {{ config['VERSION'] }} |
+                    <a href="/index/changelog">{{ _('changelog')|uc_first }}</a> |
+                    <a href="/index/credits">{{ _('credits')|uc_first }}</a>
                 </div>
-                 {% for language in config['LANGUAGES'].keys(): %}
-                    {% if 'language' in session and session['language'] == language: %}
-                        <span>{{ language|upper }}</span>
-                    {% else: %}
-                        <a href="/index/setlocale/{{ language }}">{{ language|upper }}</a>
-                    {% endif %}
-                {% endfor %}
+                <div id="language-menu">
+                        <img class="zoom" src="{{ url_for('static', filename='images/icons/zoom-in.png') }}"
+                             onclick="resizeText(1)" alt="{{ _('zoom in') }}" title="{{ _('zoom in') }}"/>
+                        <img class="zoom" src="{{ url_for('static', filename='images/icons/zoom-out.png') }}"
+                             onclick="resizeText(-1)" alt="{{ _('zoom out') }}" title="{{ _('zoom out') }}"/>
+                    {% for language in config['LANGUAGES'].keys(): %}
+                        {% if 'language' in session and session['language'] == language: %}
+                            <span>{{ language|upper }}</span>
+                        {% else: %}
+                            <a href="/index/setlocale/{{ language }}">{{ language|upper }}</a>
+                        {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div id="menu">
