--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -1,5 +1,61 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}<a href="/">{{ _('overview')|uc_first }}</a> > {{ _('credits')|uc_first }}{% endblock %}
 {% block body %}
-    credits
+    <h1>Team</h1>
+    <p>
+        <strong>Stefan Eichert</strong><br />
+        Idea and Concept, CIDOC CRM Adaptions and Mappings, Map and Leaflet Implementation
+    </p>
+    <p>
+        <strong>Alexander Watzinger</strong>
+        <a href="http://craws.net" onclick="window.open(this.href);return false;">http://craws.net</a><br />
+        Software Development, CIDOC CRM Adaptions and Mappings
+    </p>
+    <p>
+        <strong>Christof Rauchenberger</strong>
+        <a href="http://craws.net" onclick="window.open(this.href);return false;">http://craws.net</a><br />
+        System Administration
+    </p>
+    <p>
+        <strong>Jan Belik</strong>
+        <a href="http://janbelik.com" onclick="window.open(this.href);return false;">http://janbelik.com</a><br />
+        Graphic Design
+    </p>
+    <p>
+        <strong>Daniel Kittel</strong>
+        <a href="http://craws.net" onclick="window.open(this.href);return false;">http://craws.net</a><br />
+        Quality Assurance
+    </p>
+    <h1>Funding</h1>
+    <p>Development was and is funded by several projects, grants, institutes and departments:</p>
+    <a href="https://oeaw.academia.edu/MappingMedievalConflict" onclick="window.open(this.href);return false;">
+        <img src="{{ url_for('static', filename='images/sponsors/logo_medcon.png') }}" alt="MEDCON" />
+    </a>
+    <a href="http://dpp.oeaw.ac.at/" onclick="window.open(this.href);return false;">
+        <img src="{{ url_for('static', filename='images/sponsors/logo_dpp.png') }}" alt="DPP" />
+    </a>
+    <a href="http://www.oeaw.ac.at/imafo/" onclick="window.open(this.href);return false;">
+        <img src="{{ url_for('static', filename='images/sponsors/logo_imafo.gif') }}" alt="IMAFO" />
+    </a><br/><br/>
+    <a href="http://www.oeaw.ac.at/en/austrian-academy-of-sciences/" onclick="window.open(this.href);return false;">
+        <img src="{{ url_for('static', filename='images/sponsors/logo_oeaw.png') }}" alt="ÖAW" />
+    </a>
+    <a href="http://homepage.univie.ac.at/stefan.eichert/gkn/" onclick="window.open(this.href);return false;">
+        <img src="{{ url_for('static', filename='images/sponsors/logo_frontier.png') }}" alt="Frontier, Contact Zone or No Man's Land" />
+    </a>
+    <a href="https://www.fwf.ac.at/en/" onclick="window.open(this.href);return false;">
+        <img src="{{ url_for('static', filename='images/sponsors/logo_fwf.png') }}" alt="FWF Austrian Science Fund" />
+    </a>
+    <p>
+        <a href="http://www.oeaw.ac.at/imafo/arbeitsgruppen/fruehmittelalter/projekte-historische-identitaetsforschung/einzelprojekte/ostalpenraum-revisited/"
+           onclick="window.open(this.href);return false;">Ostalpenraum-revisited</a>
+    </p>
+    <h1>Contributors</h1>
+    <p>
+        Bernhard Koschicek (DPP)<br />
+        Johannes Preiser-Kapeller (MEDCON)<br />
+        Katharina Winckler (DPP)<br />
+        Mihailo Popović (DPP)<br />
+        Petra Heinicker (MEDCON)<br />
+    </p>
 {% endblock %}
