--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -32,11 +32,11 @@
                     <a href="/index/credits">{{ _('credits')|uc_first }}</a>
                 </div>
                 <div id="language-menu">
-                        <img class="zoom" src="{{ url_for('static', filename='images/icons/zoom-in.png') }}"
-                             onclick="resizeText(1)" alt="{{ _('zoom in') }}" title="{{ _('zoom in') }}"/>
-                        <img class="zoom" src="{{ url_for('static', filename='images/icons/zoom-out.png') }}"
-                             onclick="resizeText(-1)" alt="{{ _('zoom out') }}" title="{{ _('zoom out') }}"/>
-                    {% for language in config['LANGUAGES'].keys(): %}
+                    <img class="zoom" src="{{ url_for('static', filename='images/icons/zoom-in.png') }}"
+                        onclick="resizeText(1)" alt="{{ _('zoom in') }}" title="{{ _('zoom in') }}"/>
+                    <img class="zoom" src="{{ url_for('static', filename='images/icons/zoom-out.png') }}"
+                        onclick="resizeText(-1)" alt="{{ _('zoom out') }}" title="{{ _('zoom out') }}"/>
+                    {% for language in config['LANGUAGES'].keys()|sort: %}
                         {% if 'language' in session and session['language'] == language: %}
                             <span>{{ language|upper }}</span>
                         {% else: %}
@@ -48,7 +48,7 @@
         </div>
         <div id="menu">
             <div class="active"><a href="/">{{ _('overview')|uc_first }}</a></div>
-            <div><a href="/">test_menu_item</a></div>
+            <div><a href="/content">{{ _('content')|uc_first }}</a></div>
         </div>
         <div id="breadcrumb">
             {% block breadcrumb %}{% endblock %}
