--- a/openatlas/static/css/images.css
+++ b/openatlas/static/css/images.css
@@ -12,3 +12,34 @@
     display: block;
     height: 100px;
 }
+
+table.tablesorter thead tr .tablesorter-header {
+    background-image: url("/static/images/icons/arrow_updown.png");
+    background-position: right 0.4em top 0.4em;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+table.tablesorter thead tr .tablesorter-header:hover {
+    background-image: url("/static/images/icons/arrow_updown_hover.png");
+}
+
+table.tablesorter thead tr .tablesorter-headerDesc {
+    background-image: url("/static/images/icons/arrow_down.png");
+}
+
+table.tablesorter thead tr .tablesorter-headerDesc:hover {
+    background-image: url("/static/images/icons/arrow_down_hover.png");
+}
+
+table.tablesorter thead tr .tablesorter-headerAsc {
+    background-image: url("/static/images/icons/arrow_up.png");
+}
+
+table.tablesorter thead tr .tablesorter-headerAsc:hover {
+    background-image: url("/static/images/icons/arrow_up_hover.png");
+}
+
+table.tablesorter thead tr .sorter-false, table.tablesorter thead tr .sorter-false:hover {
+    background-image: none;
+}
