--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}{{ _('overview')|uc_first }}{% endblock %}
 {% block body %}
-    This is a Pythons World!
+    <div>{{ intro|safe }}</div>
+    <div>{{ _('text_intro') }}</div>
 {% endblock %}
