--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -3,17 +3,20 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="theme-color" content="#ffffff" />
-        <title>project_name</title>
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
         <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16" />
         <link rel="manifest" href="/favicon/manifest.json" />
         <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" />
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}"/>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/color.css') }}"/>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/images.css') }}"/>
-        <script src="{{ url_for('static', filename='js/functions.js') }}" type="text/javascript"></script>
+        <link rel="stylesheet" href="/static/css/reset.css" />
+        <link rel="stylesheet" href="/static/css/style.css" />
+        <link rel="stylesheet" href="/static/css/color.css" />
+        <link rel="stylesheet" href="/static/css/images.css" />
+        <script type="text/javascript" src="/static/js/jquery/jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" src="/static/js/jquery/jquery.tablesorter.min.js"></script>
+        <script type="text/javascript" src="/static/js/tinymce/tinymce.min.js"></script>
+        <script type="text/javascript" src="/static/js/functions.js"></script>
+        <title>project_name</title>
     </head>
     <body>
         <div id="header">
@@ -23,19 +26,28 @@
                 {% if 'local' in request['url_root'] %}
                     local
                 {% endif %}
-                <noscript><div class="error">{{ _('warning no js') }}</div></noscript>
+                <noscript><div class="error">{{ _('warning no js') }}</div></noscript><br />
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            <div class="message {{ category }}">{{ message }}</div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
             </div>
             <div id="header-menu">
                 <div>
                     {{ _('version')|uc_first }} {{ config['VERSION'] }} |
                     <a href="/index/changelog">{{ _('changelog')|uc_first }}</a> |
-                    <a href="/index/credits">{{ _('credits')|uc_first }}</a>
+                    <a href="/index/credits">{{ _('credits')|uc_first }}</a> |
+                    <a href="/index/contact">{{ _('contact')|uc_first }}</a> |
+                    <a href="/index/faq">{{ _('faq')|uc_first }}</a>
                 </div>
                 <div id="language-menu">
-                    <img class="zoom" src="{{ url_for('static', filename='images/icons/zoom-in.png') }}"
-                        onclick="resizeText(1)" alt="{{ _('zoom in') }}" title="{{ _('zoom in') }}"/>
-                    <img class="zoom" src="{{ url_for('static', filename='images/icons/zoom-out.png') }}"
-                        onclick="resizeText(-1)" alt="{{ _('zoom out') }}" title="{{ _('zoom out') }}"/>
+                    <img class="zoom" src="/static/images/icons/zoom-in.png" title="{{ _('zoom in') }}"
+                        onclick="resizeText(1)" alt="{{ _('zoom in') }}" />
+                    <img class="zoom" src="/static/images/icons/zoom-out.png" title="{{ _('zoom out') }}"
+                        onclick="resizeText(-1)" alt="{{ _('zoom out') }}" />
                     {% for language in config['LANGUAGES'].keys()|sort: %}
                         {% if 'language' in session and session['language'] == language: %}
                             <span>{{ language|upper }}</span>
