--- a/openatlas/templates/content/update.html
+++ b/openatlas/templates/content/update.html
@@ -2,7 +2,7 @@
 {% block breadcrumb %}
     <a href="/content">{{ _('content')|uc_first }}</a> >
     <a href="/content/view/{{ item }}">{{ item|uc_first }}</a> >
-    {{ _('update')|uc_first }}
+    {{ _('edit')|uc_first }}
 {% endblock %}
 {% block body %}
 <form method="post">
