--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -8,10 +8,10 @@
         <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16" />
         <link rel="manifest" href="/favicon/manifest.json" />
         <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" />
-        <link rel="stylesheet" href="/static/css/reset.css" />
-        <link rel="stylesheet" href="/static/css/style.css" />
-        <link rel="stylesheet" href="/static/css/color.css" />
-        <link rel="stylesheet" href="/static/css/images.css" />
+        <link rel="stylesheet" href="/static/css/reset.css?v={{ config['VERSION'] }}" />
+        <link rel="stylesheet" href="/static/css/style.css?v={{ config['VERSION'] }}" />
+        <link rel="stylesheet" href="/static/css/color.css?v={{ config['VERSION'] }}" />
+        <link rel="stylesheet" href="/static/css/images.css?v={{ config['VERSION'] }}" />
         <script type="text/javascript" src="/static/js/jquery/jquery-3.1.1.min.js"></script>
         <script type="text/javascript" src="/static/js/jquery/jquery.tablesorter.min.js"></script>
         <script type="text/javascript" src="/static/js/tinymce/tinymce.min.js"></script>
