--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -11,6 +11,7 @@ a {
 
 p {
     margin: 0.5em 0 1em;
+    max-width: 80em;
 }
 
 p.inverse-heading {
@@ -183,7 +184,6 @@ table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 table.tablesorter tbody td {
     padding: 0.3em;
     vertical-align: top;
-    white-space: nowrap;
 }
 
 table.tablesorter thead tr th.sorter-false {
