--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -18,13 +18,13 @@
         <script type="text/javascript" src="/static/js/jquery/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <script type="text/javascript" src="/static/js/tinymce/tinymce.min.js"></script>
         <script type="text/javascript" src="/static/js/functions.js"></script>
-        <title>project_name</title>
+        <title>{{ session['settings']['site_name'] }}</title>
     </head>
     <body>
         <div id="header">
             <div id="logo"><a href="/"></a></div>
             <div id="site-name">
-                project_name
+                {{ session['settings']['site_name'] }}
                 {% if 'local' in request['url_root'] %}
                     local
                 {% endif %}
