--- a/openatlas/templates/settings/update.html
+++ b/openatlas/templates/settings/update.html
@@ -3,37 +3,37 @@
     <a href="/settings">{{ _('settings')|uc_first }}</a> > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block body %}
-    <div class="button-bar">
-        <a href="/settings/update">{{ _('save')|uc_first }}</a>
-    </div>
-    {% set data_general = [
-        {form.site_name.label: form.site_name},
-        {form.default_language.label: form.default_language},
-        {form.default_table_rows.label: form.default_table_rows},
-        {form.log_level.label: form.log_level},
-        {form.maintenance.label: form.maintenance},
-        {form.offline.label: form.offline},
-    ] %}
-    {% set data_mail = [
-        {form.mail.label: form.mail},
-        {form.mail_transport_username.label: form.mail_transport_username},
-        {form.mail_transport_host.label: form.mail_transport_host},
-        {form.mail_transport_port.label: form.mail_transport_port},
-        {form.mail_transport_type.label: form.mail_transport_type},
-        {form.mail_transport_ssl.label: form.mail_transport_ssl},
-        {form.mail_transport_auth.label: form.mail_transport_auth},
-        {form.mail_from_email.label: form.mail_from_email},
-        {form.mail_from_name.label: form.mail_from_name},
-        {form.mail_recipients_login.label: form.mail_recipients_login},
-        {form.mail_recipients_feedback.label: form.mail_recipients_feedback},
-    ] %}
-    {% set data_authentication = [
-        {form.random_password_length.label: form.random_password_length},
-        {form.reset_confirm_hours.label: form.reset_confirm_hours},
-        {form.failed_login_tries.label: form.failed_login_tries},
-        {form.failed_login_forget_minutes.label: form.failed_login_forget_minutes},
-    ] %}
     <form method="post">
+    <div class="button-bar">
+        <input type="submit" value="{{ _('save')|uc_first }}" />
+    </div>
+        {% set data_general = [
+            {form.site_name.label: form.site_name},
+            {form.default_language.label: form.default_language},
+            {form.default_table_rows.label: form.default_table_rows},
+            {form.log_level.label: form.log_level},
+            {form.maintenance.label: form.maintenance},
+            {form.offline.label: form.offline},
+        ] %}
+        {% set data_mail = [
+            {form.mail.label: form.mail},
+            {form.mail_transport_username.label: form.mail_transport_username},
+            {form.mail_transport_host.label: form.mail_transport_host},
+            {form.mail_transport_port.label: form.mail_transport_port},
+            {form.mail_transport_type.label: form.mail_transport_type},
+            {form.mail_transport_ssl.label: form.mail_transport_ssl},
+            {form.mail_transport_auth.label: form.mail_transport_auth},
+            {form.mail_from_email.label: form.mail_from_email},
+            {form.mail_from_name.label: form.mail_from_name},
+            {form.mail_recipients_login.label: form.mail_recipients_login},
+            {form.mail_recipients_feedback.label: form.mail_recipients_feedback},
+        ] %}
+        {% set data_authentication = [
+            {form.random_password_length.label: form.random_password_length},
+            {form.reset_confirm_hours.label: form.reset_confirm_hours},
+            {form.failed_login_tries.label: form.failed_login_tries},
+            {form.failed_login_forget_minutes.label: form.failed_login_forget_minutes},
+        ] %}
         {{ form.csrf_token }}
         <div id="tabs" class="tabs-container">
             <ul>
@@ -52,6 +52,9 @@
             </div>
         </div>
     </form>
+{% for field, errors in form.errors.iteritems() %}
+    {{ form[field].label }}: {{ ', '.join(errors) }}
+{% endfor %}
     <script type="text/javascript">
         $(function () {
             $("#tabs").tabs();
