--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -56,7 +56,7 @@ div.mce-tinymce {
     cursor: pointer;
     display: inline-block;
     margin-right: 1em;
-    padding: 0.3em 0.5em;
+    padding: 0.4em 1em;
 }
 
 noscript div {
@@ -206,6 +206,39 @@ div.data-table > div > div {
     width: inherit;
 }
 
+input[type=text], input[type=password], textarea, select  {
+    border-width: 1px;
+    border-style: solid;
+}
+
+input[type=text], input[type=password], select {
+    padding: 0;
+    margin: 0;
+    width: 15.6em;
+    height: 1.6em;
+    -ms-box-sizing:content-box;
+    -moz-box-sizing:content-box;
+    -webkit-box-sizing:content-box;
+    box-sizing:content-box;
+}
+
+input[type=text], input[type=password] {
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+}
+
+input[type=submit] {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1em;
+    font-weight: bold;
+    margin-right: 1em;
+    padding: 0.3em 0.5em;
+    text-decoration: none;
+    white-space: nowrap;
+}
 
 .tabs-container .ui-widget-header,
 .ui-state-active,
