--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -28,7 +28,7 @@
                 {% if 'local' in request['url_root'] %}
                     local
                 {% endif %}
-                <noscript><div class="error">{{ _('warning no js') }}</div></noscript><br />
+                <noscript><div class="error">{{ _('warning no js') }}</div></noscript><br /><br />
                 {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
                         {% for category, message in messages %}
