--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}<a href="/">{{ _('model')|uc_first }}</a>{% endblock %}
+{% block breadcrumb %}<a href="/model">{{ _('model')|uc_first }}</a>{% endblock %}
 {% block body %}
     <p>
         <a href="/model/class">{{ _('classes')|uc_first }}</a> -
