--- a/openatlas/templates/model/class.html
+++ b/openatlas/templates/model/class.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}<a href="/">{{ _('model')|uc_first }}</a> > {{ _('classes')|uc_first }}{% endblock %}
+{% block breadcrumb %}<a href="/model">{{ _('model')|uc_first }}</a> > {{ _('classes')|uc_first }}{% endblock %}
 {% block body %}
-    {{ table_classes|pager|safe }}
+    {{ table|pager|safe }}
 {% endblock %}
