--- a/openatlas/templates/model/class_view.html
+++ b/openatlas/templates/model/class_view.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="/">{{ _('model')|uc_first }}</a> > <a href="/model/class">{{ _('classes')|uc_first }}</a> > {{ class_.code }}
+    <a href="/model">{{ _('model')|uc_first }}</a> > <a href="/model/class">{{ _('classes')|uc_first }}</a> > {{ class_.code }}
 {% endblock %}
 {% block body %}
     <div style="float:left;padding-right:2em;">
