--- a/openatlas/templates/model/class_view.html
+++ b/openatlas/templates/model/class_view.html
@@ -9,7 +9,7 @@
         <p><strong>{{ _('info')|uc_first }}</strong></p>
         {% set data = [
             {'code': class_.code},
-            {'name': class_.get_name_translated()},
+            {'name': class_.get_i18n('name')}
         ] %}
         {{ data|data_table()|safe }}
     </div>
@@ -24,6 +24,6 @@
     <div style="clear:both"></div>
     <div class="description">
         <strong>{{ _('description')|uc_first }}</strong>
-        <p>{{ class_.comment_translated }}</p>
+        <p>{{ class_.get_i18n('comment') }}</p>
     </div>
 {% endblock %}
